@@ -20,7 +20,6 @@ import net.minestom.server.adventure.AdventurePacketConvertor;
 import net.minestom.server.adventure.Localizable;
 import net.minestom.server.adventure.audience.Audiences;
 import net.minestom.server.attribute.Attribute;
-import net.minestom.server.command.CommandManager;
 import net.minestom.server.command.CommandSender;
 import net.minestom.server.coordinate.Point;
 import net.minestom.server.coordinate.Pos;
@@ -44,6 +43,7 @@ import net.minestom.server.inventory.PlayerInventory;
 import net.minestom.server.item.ItemStack;
 import net.minestom.server.item.Material;
 import net.minestom.server.item.metadata.WrittenBookMeta;
+import net.minestom.server.listener.manager.PacketListenerManager;
 import net.minestom.server.message.ChatMessageType;
 import net.minestom.server.message.ChatPosition;
 import net.minestom.server.message.Messenger;
@@ -51,11 +51,11 @@ import net.minestom.server.network.ConnectionManager;
 import net.minestom.server.network.ConnectionState;
 import net.minestom.server.network.PlayerProvider;
 import net.minestom.server.network.packet.client.ClientPacket;
-import net.minestom.server.network.packet.client.play.ClientChatMessagePacket;
 import net.minestom.server.network.packet.server.SendablePacket;
 import net.minestom.server.network.packet.server.ServerPacket;
 import net.minestom.server.network.packet.server.login.LoginDisconnectPacket;
 import net.minestom.server.network.packet.server.play.*;
+import net.minestom.server.network.player.GameProfile;
 import net.minestom.server.network.player.PlayerConnection;
 import net.minestom.server.network.player.PlayerSocketConnection;
 import net.minestom.server.recipe.Recipe;
@@ -65,12 +65,14 @@ import net.minestom.server.scoreboard.BelowNameTag;
 import net.minestom.server.scoreboard.Team;
 import net.minestom.server.snapshot.EntitySnapshot;
 import net.minestom.server.snapshot.PlayerSnapshot;
+import net.minestom.server.snapshot.SnapshotImpl;
 import net.minestom.server.snapshot.SnapshotUpdater;
 import net.minestom.server.statistic.PlayerStatistic;
 import net.minestom.server.timer.Scheduler;
 import net.minestom.server.utils.MathUtils;
 import net.minestom.server.utils.PacketUtils;
 import net.minestom.server.utils.async.AsyncUtils;
+import net.minestom.server.utils.chunk.ChunkUpdateLimitChecker;
 import net.minestom.server.utils.chunk.ChunkUtils;
 import net.minestom.server.utils.function.IntegerBiConsumer;
 import net.minestom.server.utils.identity.NamedAndIdentified;
@@ -104,8 +106,9 @@ import java.util.function.UnaryOperator;
  * You can easily create your own implementation of this and use it with {@link ConnectionManager#setPlayerProvider(PlayerProvider)}.
  */
 public class Player extends LivingEntity implements CommandSender, Localizable, HoverEventSource<ShowEntity>, Identified, NamedAndIdentified {
-
     private static final Component REMOVE_MESSAGE = Component.text("You have been removed from the server without reason.", NamedTextColor.RED);
+    private static final int PACKET_PER_TICK = Integer.getInteger("minestom.packet-per-tick", 20);
+    private static final int PACKET_QUEUE_SIZE = Integer.getInteger("minestom.packet-queue-size", 1000);
 
     private long lastKeepAlive;
     private boolean answerKeepAlive;
@@ -120,6 +123,11 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     private DimensionType dimensionType;
     private GameMode gameMode;
+    /**
+     * Keeps track of what chunks are sent to the client, this defines the center of the loaded area
+     * in the range of {@link MinecraftServer#getChunkViewDistance()}
+     */
+    private Vec chunksLoadedByClient = Vec.ZERO;
     final IntegerBiConsumer chunkAdder = (chunkX, chunkZ) -> {
         // Load new chunks
         this.instance.loadOptionalChunk(chunkX, chunkZ).thenAccept(chunk -> {
@@ -166,6 +174,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     // Game state (https://wiki.vg/Protocol#Change_Game_State)
     private boolean enableRespawnScreen;
+    private final ChunkUpdateLimitChecker chunkUpdateLimitChecker = new ChunkUpdateLimitChecker(6);
 
     // Experience orb pickup
     protected Cooldown experiencePickupCooldown = new Cooldown(Duration.of(10, TimeUnit.SERVER_TICK));
@@ -198,8 +207,6 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         this.username = username;
         this.usernameComponent = Component.text(username);
         this.playerConnection = playerConnection;
-
-        setBoundingBox(0.6f, 1.8f, 0.6f);
 
         setRespawnPoint(Pos.ZERO);
 
@@ -240,23 +247,36 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         this.dimensionType = spawnInstance.getDimensionType();
 
         NBTCompound nbt = NBT.Compound(Map.of(
+                "minecraft:chat_type", Messenger.chatRegistry(),
                 "minecraft:dimension_type", MinecraftServer.getDimensionTypeManager().toNBT(),
                 "minecraft:worldgen/biome", MinecraftServer.getBiomeManager().toNBT()));
         final JoinGamePacket joinGamePacket = new JoinGamePacket(getEntityId(), false, gameMode, null,
-                List.of("minestom:world"), nbt, dimensionType.toNBT(), dimensionType.getName().asString(),
+                List.of(dimensionType.getName().asString()), nbt, dimensionType.toString(), dimensionType.getName().asString(),
                 0, 0, MinecraftServer.getChunkViewDistance(), MinecraftServer.getChunkViewDistance(),
                 false, true, false, levelFlat);
-        playerConnection.sendPacket(joinGamePacket);
+        sendPacket(joinGamePacket);
 
         // Server brand name
-        playerConnection.sendPacket(PluginMessagePacket.getBrandPacket());
+        sendPacket(PluginMessagePacket.getBrandPacket());
         // Difficulty
-        playerConnection.sendPacket(new ServerDifficultyPacket(MinecraftServer.getDifficulty(), true));
+        sendPacket(new ServerDifficultyPacket(MinecraftServer.getDifficulty(), true));
 
-        playerConnection.sendPacket(new SpawnPositionPacket(respawnPoint, 0));
+        sendPacket(new SpawnPositionPacket(respawnPoint, 0));
 
         // Add player to list with spawning skin
-        PlayerSkinInitEvent skinInitEvent = new PlayerSkinInitEvent(this, skin);
+        PlayerSkin profileSkin = null;
+        if (playerConnection instanceof PlayerSocketConnection socketConnection) {
+            final GameProfile gameProfile = socketConnection.gameProfile();
+            if (gameProfile != null) {
+                for (GameProfile.Property property : gameProfile.properties()) {
+                    if (property.name().equals("textures")) {
+                        profileSkin = new PlayerSkin(property.value(), property.signature());
+                        break;
+                    }
+                }
+            }
+        }
+        PlayerSkinInitEvent skinInitEvent = new PlayerSkinInitEvent(this, profileSkin);
         EventDispatcher.call(skinInitEvent);
         this.skin = skinInitEvent.getSkin();
         // FIXME: when using Geyser, this line remove the skin of the client
@@ -264,7 +284,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         for (var player : MinecraftServer.getConnectionManager().getOnlinePlayers()) {
             if (player != this) sendPacket(player.getAddPlayerToList());
         }
-        
+
         //Teams
         for (Team team : MinecraftServer.getTeamManager().getTeams()) {
             sendPacket(team.createTeamsCreationPacket());
@@ -276,13 +296,12 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         // Recipes start
         {
             RecipeManager recipeManager = MinecraftServer.getRecipeManager();
-            playerConnection.sendPacket(recipeManager.getDeclareRecipesPacket());
+            sendPacket(recipeManager.getDeclareRecipesPacket());
 
             List<String> recipesIdentifier = new ArrayList<>();
             for (Recipe recipe : recipeManager.getRecipes()) {
                 if (!recipe.shouldShow(this))
                     continue;
-
                 recipesIdentifier.add(recipe.getRecipeId());
             }
             if (!recipesIdentifier.isEmpty()) {
@@ -292,16 +311,16 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                         false, false,
                         false, false,
                         recipesIdentifier, recipesIdentifier);
-                playerConnection.sendPacket(unlockRecipesPacket);
+                sendPacket(unlockRecipesPacket);
             }
         }
         // Recipes end
 
         // Tags
-        this.playerConnection.sendPacket(TagsPacket.DEFAULT_TAGS);
+        sendPacket(TagsPacket.DEFAULT_TAGS);
 
         // Some client updates
-        this.playerConnection.sendPacket(getPropertiesPacket()); // Send default properties
+        sendPacket(getPropertiesPacket()); // Send default properties
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshHealth(); // Heal and send health packet
         refreshAbilities(); // Send abilities packet
@@ -319,9 +338,6 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     @Override
     public void update(long time) {
-        // Network tick
-        this.playerConnection.update();
-
         // Process received packets
         interpretPacketQueue();
 
@@ -330,9 +346,10 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         // Experience orb pickup
         if (experiencePickupCooldown.isReady(time)) {
             experiencePickupCooldown.refreshLastUpdate(time);
+            final Point loweredPosition = position.sub(0, .5, 0);
             this.instance.getEntityTracker().nearbyEntities(position, expandedBoundingBox.width(),
                     EntityTracker.Target.EXPERIENCE_ORBS, experienceOrb -> {
-                        if (expandedBoundingBox.intersectEntity(position, experienceOrb)) {
+                        if (expandedBoundingBox.intersectEntity(loweredPosition, experienceOrb)) {
                             PickupExperienceEvent pickupExperienceEvent = new PickupExperienceEvent(this, experienceOrb);
                             EventDispatcher.callCancellable(pickupExperienceEvent, () -> {
                                 short experienceCount = pickupExperienceEvent.getExperienceCount(); // TODO give to player
@@ -355,7 +372,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                 refreshActiveHand(false, isOffHand, false);
 
                 final ItemStack foodItem = itemUpdateStateEvent.getItemStack();
-                final boolean isFood = foodItem.getMaterial().isFood();
+                final boolean isFood = foodItem.material().isFood();
 
                 if (isFood) {
                     PlayerEatEvent playerEatEvent = new PlayerEatEvent(this, foodItem, eatingHand);
@@ -404,14 +421,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
             // #buildDeathScreenText can return null, check here
             if (deathText != null) {
-                playerConnection.sendPacket(new DeathCombatEventPacket(getEntityId(), -1, deathText));
+                sendPacket(new DeathCombatEventPacket(getEntityId(), -1, deathText));
             }
 
             // #buildDeathMessage can return null, check here
             if (chatMessage != null) {
                 Audiences.players().sendMessage(chatMessage);
             }
-
         }
         super.kill();
     }
@@ -427,25 +443,46 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         setFireForDuration(0);
         setOnFire(false);
         refreshHealth();
-        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType(), getDimensionType().getName().asString(),
-                0, gameMode, gameMode, false, levelFlat, true);
-        getPlayerConnection().sendPacket(respawnPacket);
+        sendPacket(new RespawnPacket(getDimensionType().toString(), getDimensionType().getName().asString(),
+               0, gameMode, gameMode, false, levelFlat, true));
 
         PlayerRespawnEvent respawnEvent = new PlayerRespawnEvent(this);
         EventDispatcher.call(respawnEvent);
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshIsDead(false);
+        updatePose();
 
-        // Runnable called when teleportation is successful (after loading and sending necessary chunk)
-        teleport(respawnEvent.getRespawnPosition()).thenRun(this::refreshAfterTeleport);
+        Pos respawnPosition = respawnEvent.getRespawnPosition();
+
+        // The client unloads chunks when respawning, so resend all chunks next to spawn
+        ChunkUtils.forChunksInRange(respawnPosition, Math.min(MinecraftServer.getChunkViewDistance(), settings.getViewDistance()), (chunkX, chunkZ) ->
+                this.instance.loadOptionalChunk(chunkX, chunkZ).thenAccept(chunk -> {
+                    try {
+                        if (chunk != null) {
+                            chunk.sendChunk(this);
+                        }
+                    } catch (Exception e) {
+                        MinecraftServer.getExceptionManager().handleException(e);
+                    }
+                }));
+        chunksLoadedByClient = new Vec(respawnPosition.chunkX(), respawnPosition.chunkZ());
+        // Client also needs all entities resent to them, since those are unloaded as well
+        this.instance.getEntityTracker().nearbyEntitiesByChunkRange(respawnPosition, Math.min(MinecraftServer.getChunkViewDistance(), settings.getViewDistance()),
+                EntityTracker.Target.ENTITIES, entity -> {
+                    // Skip refreshing self with a new viewer
+                    if (!entity.getUuid().equals(uuid)) {
+                        entity.updateNewViewer(this);
+                    }
+                });
+        teleport(respawnPosition).thenRun(this::refreshAfterTeleport);
     }
 
     /**
      * Sends necessary packets to synchronize player data after a {@link RespawnPacket}
      */
     private void refreshClientStateAfterRespawn() {
-        this.playerConnection.sendPacket(new UpdateHealthPacket(this.getHealth(), food, foodSaturation));
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new UpdateHealthPacket(this.getHealth(), food, foodSaturation));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
         triggerStatus((byte) (24 + permissionLevel)); // Set permission level
         refreshAbilities();
     }
@@ -456,9 +493,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * again, and any changes will be visible to the player.
      */
     public void refreshCommands() {
-        CommandManager commandManager = MinecraftServer.getCommandManager();
-        DeclareCommandsPacket declareCommandsPacket = commandManager.createDeclareCommandsPacket(this);
-        playerConnection.sendPacket(declareCommandsPacket);
+        sendPacket(MinecraftServer.getCommandManager().createDeclareCommandsPacket(this));
     }
 
     @Override
@@ -508,7 +543,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
 
     @Override
     public void sendPacketToViewersAndSelf(@NotNull SendablePacket packet) {
-        this.playerConnection.sendPacket(packet);
+        sendPacket(packet);
         super.sendPacketToViewersAndSelf(packet);
     }
 
@@ -533,6 +568,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             return AsyncUtils.VOID_FUTURE;
         }
         // Must update the player chunks
+        chunkUpdateLimitChecker.clearHistory();
         final boolean dimensionChange = !Objects.equals(dimensionType, instance.getDimensionType());
         final Consumer<Instance> runnable = (i) -> spawnPlayer(i, spawnPosition,
                 currentInstance == null, dimensionChange, true);
@@ -620,7 +656,11 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         super.setInstance(instance, spawnPosition);
 
         if (updateChunks) {
-            sendPacket(new UpdateViewPositionPacket(spawnPosition.chunkX(), spawnPosition.chunkZ()));
+            final int chunkX = spawnPosition.chunkX();
+            final int chunkZ = spawnPosition.chunkZ();
+            chunksLoadedByClient = new Vec(chunkX, chunkZ);
+            chunkUpdateLimitChecker.addToHistory(getChunk());
+            sendPacket(new UpdateViewPositionPacket(chunkX, chunkZ));
             ChunkUtils.forChunksInRange(spawnPosition, MinecraftServer.getChunkViewDistance(), chunkAdder);
         }
 
@@ -640,7 +680,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param data    the message data
      */
     public void sendPluginMessage(@NotNull String channel, byte @NotNull [] data) {
-        playerConnection.sendPacket(new PluginMessagePacket(channel, data));
+        sendPacket(new PluginMessagePacket(channel, data));
     }
 
     /**
@@ -660,23 +700,18 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Messenger.sendMessage(this, message, ChatPosition.fromMessageType(type), source.uuid());
     }
 
-    /**
-     * Makes the player send a message (can be used for commands).
-     *
-     * @param message the message that the player will send
-     */
-    public void chat(@NotNull String message) {
-        addPacketToQueue(new ClientChatMessagePacket(message));
-    }
-
     @Override
     public void playSound(@NotNull Sound sound) {
         this.playSound(sound, this.position.x(), this.position.y(), this.position.z());
     }
 
+    public void playSound(@NotNull Sound sound, @NotNull Point point) {
+        sendPacket(AdventurePacketConvertor.createSoundPacket(sound, point.x(), point.y(), point.z()));
+    }
+
     @Override
     public void playSound(@NotNull Sound sound, double x, double y, double z) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createSoundPacket(sound, x, y, z));
+        sendPacket(AdventurePacketConvertor.createSoundPacket(sound, x, y, z));
     }
 
     @Override
@@ -687,12 +722,12 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         } else {
             packet = AdventurePacketConvertor.createSoundPacket(sound, emitter);
         }
-        playerConnection.sendPacket(packet);
+        sendPacket(packet);
     }
 
     @Override
     public void stopSound(@NotNull SoundStop stop) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createSoundStopPacket(stop));
+        sendPacket(AdventurePacketConvertor.createSoundStopPacket(stop));
     }
 
     /**
@@ -706,32 +741,32 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param disableRelativeVolume disable volume scaling based on distance
      */
     public void playEffect(@NotNull Effects effect, int x, int y, int z, int data, boolean disableRelativeVolume) {
-        playerConnection.sendPacket(new EffectPacket(effect.getId(), new Vec(x, y, z), data, disableRelativeVolume));
+        sendPacket(new EffectPacket(effect.getId(), new Vec(x, y, z), data, disableRelativeVolume));
     }
 
     @Override
     public void sendPlayerListHeaderAndFooter(@NotNull Component header, @NotNull Component footer) {
-        playerConnection.sendPacket(new PlayerListHeaderAndFooterPacket(header, footer));
+        sendPacket(new PlayerListHeaderAndFooterPacket(header, footer));
     }
 
     @Override
     public <T> void sendTitlePart(@NotNull TitlePart<T> part, @NotNull T value) {
-        playerConnection.sendPacket(AdventurePacketConvertor.createTitlePartPacket(part, value));
+        sendPacket(AdventurePacketConvertor.createTitlePartPacket(part, value));
     }
 
     @Override
     public void sendActionBar(@NotNull Component message) {
-        playerConnection.sendPacket(new ActionBarPacket(message));
+        sendPacket(new ActionBarPacket(message));
     }
 
     @Override
     public void resetTitle() {
-        playerConnection.sendPacket(new ClearTitlesPacket(true));
+        sendPacket(new ClearTitlesPacket(true));
     }
 
     @Override
     public void clearTitle() {
-        playerConnection.sendPacket(new ClearTitlesPacket(false));
+        sendPacket(new ClearTitlesPacket(false));
     }
 
     @Override
@@ -747,14 +782,18 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public void openBook(@NotNull Book book) {
         final ItemStack writtenBook = ItemStack.builder(Material.WRITTEN_BOOK)
-                .meta(WrittenBookMeta.fromAdventure(book, this))
+                .meta(WrittenBookMeta.class, builder -> builder.resolved(false)
+                        .generation(WrittenBookMeta.WrittenBookGeneration.ORIGINAL)
+                        .author(book.author())
+                        .title(book.title())
+                        .pages(book.pages()))
                 .build();
         // Set book in offhand
-        playerConnection.sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, writtenBook));
+        sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, writtenBook));
         // Open the book
-        playerConnection.sendPacket(new OpenBookPacket(Hand.OFF));
+        sendPacket(new OpenBookPacket(Hand.OFF));
         // Restore the item in offhand
-        playerConnection.sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, getItemInOffHand()));
+        sendPacket(new SetSlotPacket((byte) 0, 0, (short) PlayerInventoryUtils.OFFHAND_SLOT, getItemInOffHand()));
     }
 
     @Override
@@ -768,7 +807,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public void setHealth(float health) {
         super.setHealth(health);
-        this.playerConnection.sendPacket(new UpdateHealthPacket(health, food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(health, food, foodSaturation));
     }
 
     @Override
@@ -813,7 +852,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(!MathUtils.isBetween(food, 0, 20),
                 "Food has to be between 0 and 20");
         this.food = food;
-        this.playerConnection.sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
     }
 
     public float getFoodSaturation() {
@@ -830,7 +869,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(!MathUtils.isBetween(foodSaturation, 0, 20),
                 "Food saturation has to be between 0 and 20");
         this.foodSaturation = foodSaturation;
-        this.playerConnection.sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
+        sendPacket(new UpdateHealthPacket(getHealth(), food, foodSaturation));
     }
 
     /**
@@ -867,6 +906,16 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      */
     public void setDefaultEatingTime(long defaultEatingTime) {
         this.defaultEatingTime = defaultEatingTime;
+    }
+
+    @Override
+    public double getEyeHeight() {
+        return switch (getPose()) {
+            case SLEEPING -> 0.2;
+            case FALL_FLYING, SWIMMING, SPIN_ATTACK -> 0.4;
+            case SNEAKING -> 1.27;
+            default -> 1.62;
+        };
     }
 
     /**
@@ -919,13 +968,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         final PlayerInfoPacket removePlayerPacket = getRemovePlayerToList();
         final PlayerInfoPacket addPlayerPacket = getAddPlayerToList();
 
-        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType(), getDimensionType().getName().asString(),
+        RespawnPacket respawnPacket = new RespawnPacket(getDimensionType().toString(), getDimensionType().getName().asString(),
                 0, gameMode, gameMode, false, levelFlat, true);
 
-        playerConnection.sendPacket(removePlayerPacket);
-        playerConnection.sendPacket(destroyEntitiesPacket);
-        playerConnection.sendPacket(addPlayerPacket);
-        playerConnection.sendPacket(respawnPacket);
+        sendPacket(removePlayerPacket);
+        sendPacket(destroyEntitiesPacket);
+        sendPacket(addPlayerPacket);
+        sendPacket(respawnPacket);
         refreshClientStateAfterRespawn();
 
         {
@@ -1013,7 +1062,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param resourcePack the resource pack
      */
     public void setResourcePack(@NotNull ResourcePack resourcePack) {
-        playerConnection.sendPacket(new ResourcePackSendPacket(resourcePack));
+        sendPacket(new ResourcePackSendPacket(resourcePack));
     }
 
     /**
@@ -1040,7 +1089,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     private void facePosition(@NotNull FacePoint facePoint, @NotNull Point targetPosition,
                               @Nullable Entity entity, @Nullable FacePoint targetPoint) {
         final int entityId = entity != null ? entity.getEntityId() : 0;
-        playerConnection.sendPacket(new FacePlayerPacket(
+        sendPacket(new FacePlayerPacket(
                 facePoint == FacePoint.EYE ?
                         FacePlayerPacket.FacePosition.EYES : FacePlayerPacket.FacePosition.FEET, targetPosition,
                 entityId,
@@ -1054,7 +1103,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      * @param entity the entity to spectate
      */
     public void spectate(@NotNull Entity entity) {
-        playerConnection.sendPacket(new CameraPacket(entity));
+        sendPacket(new CameraPacket(entity));
     }
 
     /**
@@ -1129,7 +1178,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setExp(float exp) {
         Check.argCondition(!MathUtils.isBetween(exp, 0, 1), "Exp should be between 0 and 1");
         this.exp = exp;
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
     }
 
     /**
@@ -1149,7 +1198,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
      */
     public void setLevel(int level) {
         this.level = level;
-        this.playerConnection.sendPacket(new SetExperiencePacket(exp, level, 0));
+        sendPacket(new SetExperiencePacket(exp, level, 0));
     }
 
     /**
@@ -1292,7 +1341,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         Check.argCondition(dimensionType.equals(getDimensionType()),
                 "The dimension needs to be different than the current one!");
         this.dimensionType = dimensionType;
-        sendPacket(new RespawnPacket(dimensionType, dimensionType.getName().asString(),
+        sendPacket(new RespawnPacket(dimensionType.toString(), getDimensionType().getName().asString(),
                 0, gameMode, gameMode, false, levelFlat, true));
         refreshClientStateAfterRespawn();
     }
@@ -1311,7 +1360,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         } else {
             disconnectPacket = new DisconnectPacket(component);
         }
-        playerConnection.sendPacket(disconnectPacket);
+        sendPacket(disconnectPacket);
         playerConnection.disconnect();
     }
 
@@ -1333,7 +1382,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setHeldItemSlot(byte slot) {
         Check.argCondition(!MathUtils.isBetween(slot, 0, 8), "Slot has to be between 0 and 8");
         refreshHeldSlot(slot);
-        this.playerConnection.sendPacket(new HeldItemChangePacket(slot));
+        sendPacket(new HeldItemChangePacket(slot));
     }
 
     /**
@@ -1348,8 +1397,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     public void setTeam(Team team) {
         super.setTeam(team);
         if (team != null) {
-            var players = MinecraftServer.getConnectionManager().getOnlinePlayers();
-            PacketUtils.sendGroupedPacket(players, team.createTeamsCreationPacket());
+            PacketUtils.broadcastPacket(team.createTeamsCreationPacket());
         }
     }
 
@@ -1398,7 +1446,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
                 return;
             }
 
-            playerConnection.sendPacket(new OpenWindowPacket(newInventory.getWindowId(),
+            sendPacket(new OpenWindowPacket(newInventory.getWindowId(),
                     newInventory.getInventoryType().getWindowType(), newInventory.getTitle()));
             newInventory.addViewer(this);
             this.openInventory = newInventory;
@@ -1429,17 +1477,19 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             }
         }
 
-        CloseWindowPacket closeWindowPacket;
-        if (openInventory == null) {
-            closeWindowPacket = new CloseWindowPacket((byte) 0);
-        } else {
-            closeWindowPacket = new CloseWindowPacket(openInventory.getWindowId());
-            openInventory.removeViewer(this); // Clear cache
-            this.openInventory = null;
+        if (openInventory == getOpenInventory()) {
+            CloseWindowPacket closeWindowPacket;
+            if (openInventory == null) {
+                closeWindowPacket = new CloseWindowPacket((byte) 0);
+            } else {
+                closeWindowPacket = new CloseWindowPacket(openInventory.getWindowId());
+                openInventory.removeViewer(this); // Clear cache
+                this.openInventory = null;
+            }
+            sendPacket(closeWindowPacket);
+            inventory.update();
+            this.didCloseInventory = true;
         }
-        playerConnection.sendPacket(closeWindowPacket);
-        inventory.update();
-        this.didCloseInventory = true;
     }
 
     /**
@@ -1488,7 +1538,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @ApiStatus.Internal
     protected void synchronizePosition(boolean includeSelf) {
         if (includeSelf) {
-            playerConnection.sendPacket(new PlayerPositionAndLookPacket(position, (byte) 0x00, getNextTeleportId(), false));
+            sendPacket(new PlayerPositionAndLookPacket(position, (byte) 0x00, getNextTeleportId(), false));
         }
         super.synchronizePosition(includeSelf);
     }
@@ -1710,7 +1760,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             flags |= PlayerAbilitiesPacket.FLAG_ALLOW_FLYING;
         if (instantBreak)
             flags |= PlayerAbilitiesPacket.FLAG_INSTANT_BREAK;
-        playerConnection.sendPacket(new PlayerAbilitiesPacket(flags, flyingSpeed, fieldViewModifier));
+        sendPacket(new PlayerAbilitiesPacket(flags, flyingSpeed, fieldViewModifier));
     }
 
     /**
@@ -1727,8 +1777,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @ApiStatus.Internal
     @ApiStatus.Experimental
     public void interpretPacketQueue() {
+        if (this.packets.size() >= PACKET_QUEUE_SIZE) {
+            kick(Component.text("Too Many Packets", NamedTextColor.RED));
+            return;
+        }
+        final PacketListenerManager manager = MinecraftServer.getPacketListenerManager();
         // This method is NOT thread-safe
-        this.packets.drain(packet -> MinecraftServer.getPacketListenerManager().processClientPacket(packet, this));
+        this.packets.drain(packet -> manager.processClientPacket(packet, this), PACKET_PER_TICK);
     }
 
     /**
@@ -1814,7 +1869,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             return null;
 
         final ItemStack updatedItem = getItemInHand(hand);
-        final boolean isFood = updatedItem.getMaterial().isFood();
+        final boolean isFood = updatedItem.material().isFood();
 
         if (isFood && !allowFood)
             return null;
@@ -1863,9 +1918,9 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         final PlayerSkin skin = this.skin;
         List<PlayerInfoPacket.AddPlayer.Property> prop = skin != null ?
                 List.of(new PlayerInfoPacket.AddPlayer.Property("textures", skin.textures(), skin.signature())) :
-                Collections.emptyList();
+                List.of();
         return new PlayerInfoPacket(PlayerInfoPacket.Action.ADD_PLAYER,
-                new PlayerInfoPacket.AddPlayer(getUuid(), getUsername(), prop, getGameMode(), getLatency(), displayName));
+                new PlayerInfoPacket.AddPlayer(getUuid(), getUsername(), prop, getGameMode(), getLatency(), displayName, null));
     }
 
     /**
@@ -1970,7 +2025,7 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public @NotNull PlayerSnapshot updateSnapshot(@NotNull SnapshotUpdater updater) {
         final EntitySnapshot snapshot = super.updateSnapshot(updater);
-        return new EntitySnapshotImpl.Player(snapshot, username, gameMode);
+        return new SnapshotImpl.Player(snapshot, username, gameMode);
     }
 
     /**
@@ -2009,6 +2064,24 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
     @Override
     public Player asPlayer() {
         return this;
+    }
+
+    protected void sendChunkUpdates(Chunk newChunk) {
+        if (chunkUpdateLimitChecker.addToHistory(newChunk)) {
+            final int newX = newChunk.getChunkX();
+            final int newZ = newChunk.getChunkZ();
+            final Vec old = chunksLoadedByClient;
+            sendPacket(new UpdateViewPositionPacket(newX, newZ));
+            ChunkUtils.forDifferingChunksInRange(newX, newZ, (int) old.x(), (int) old.z(),
+                    MinecraftServer.getChunkViewDistance(), chunkAdder, chunkRemover);
+            this.chunksLoadedByClient = new Vec(newX, newZ);
+        }
+    }
+
+    @Override
+    public @NotNull CompletableFuture<Void> teleport(@NotNull Pos position, long @Nullable [] chunks) {
+        chunkUpdateLimitChecker.clearHistory();
+        return super.teleport(position, chunks);
     }
 
     /**
@@ -2098,9 +2171,13 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             return mainHand;
         }
 
-        public boolean enableTextFiltering() { return enableTextFiltering; }
+        public boolean enableTextFiltering() {
+            return enableTextFiltering;
+        }
 
-        public boolean allowServerListings() { return allowServerListings; }
+        public boolean allowServerListings() {
+            return allowServerListings;
+        }
 
         /**
          * Changes the player settings internally.
@@ -2117,7 +2194,8 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
         public void refresh(String locale, byte viewDistance, ChatMessageType chatMessageType, boolean chatColors,
                             byte displayedSkinParts, MainHand mainHand, boolean enableTextFiltering, boolean allowServerListings) {
             this.locale = locale;
-            this.viewDistance = viewDistance;
+            // Clamp viewDistance to valid bounds
+            this.viewDistance = (byte) MathUtils.clamp(viewDistance, 2, 32);
             this.chatMessageType = chatMessageType;
             this.chatColors = chatColors;
             this.displayedSkinParts = displayedSkinParts;
@@ -2126,7 +2204,10 @@ public class Player extends LivingEntity implements CommandSender, Localizable, 
             this.allowServerListings = allowServerListings;
 
             // TODO: Use the metadata object here
+            metadata.setNotifyAboutChanges(false);
             metadata.setIndex((byte) 17, Metadata.Byte(displayedSkinParts));
+            metadata.setIndex((byte) 18, Metadata.Byte((byte) (this.mainHand == MainHand.RIGHT ? 1 : 0)));
+            metadata.setNotifyAboutChanges(true);
         }
 
     }
